Fix: surnames with prefixes wrapping in tag-clouds

--- a/themes/colors/css/coldday.css
+++ b/themes/colors/css/coldday.css
@@ -3,7 +3,7 @@
 *
 * Based on standard theme, which is Copyright (C) 2002 to 2010  PGV Development Team.        
 *
-* $Id: ash.css 8664 2010-06-08 16:12:03Z rob $
+* $Id: ash.css 8709 2010-06-11 23:35:42Z rob $
 */
 
 .something {
@@ -1610,19 +1610,26 @@ padding-top: 12px;
 text-align: center;
 } 
 
+.tag_cloud {
+font-family: tahoma, arial, helvetica, sans-serif;
+}
+.tag_cloud a {
+white-space:nowrap;
+}
+
 .clearfloat {
-	clear: both;
+clear: both;
 }
 
 dl {
-	margin:0;
+margin:0;
 }
 
 dt {
-	float:left; 
-	font-weight:bold;
-	margin-right:10px;
-	clear:both; 
+float:left; 
+font-weight:bold;
+margin-right:10px;
+clear:both; 
 }
 
 /* Classes for the INDI page header */
